--- a/recipes/cheesy_zycchini_casserole.html
+++ b/recipes/cheesy_zycchini_casserole.html
@@ -6,9 +6,9 @@
     <title>Cheesy Zucchini Casserole</title>
 </head>
 <body>
-    <a href="../index.html"></a>
+    <a href="../index.html">Home</a>
     <h1>Cheesy Zucchini Casserole</h1>
-    <img src="pexels-busra-yurt-2148943872-33312938.jpg" alt="Cheesy Zucchini Casserole">
+    <img src="pexels-busra-yurt-2148943872-33312938.jpg" alt="Cheesy Zucchini Casserole" width="100%">
     <h2>Description</h2>
     <p>This zucchini casserole with bread cubes, onion, and Cheddar is simple and easy to make for a deliciously cheesy vegetable side dish.</p>
     <h3>Ingredients</h3>
