Add pictures and html files

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/cheesy_zycchini_casserole.html">Cheesy Zucchini Casserole</a></li>
-        <li><a href="recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="recipes/cheesy_zycchini_casserole.html">Cheesy Zucchini Casserole</a></li>
+        <li><a href="recipes/slow_cooker_pepper_steak.html">Slow Cooker Pepper Steak</a></li>
+        <li><a href="recipes/slow_cooker_lime_cilantro_chicken.html">Slow Cooker Lime Cilantro Chicken</a></li>
     </ul>
-    
 </body>
 </html>
